--- a/index.html
+++ b/index.html
@@ -1,48 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>validaton</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="animatin.css">
 </head>
+
 <body>
-    <div id="container">
-        <div id="info">
-            <h3>Farhad Ahmadi</h3>
-            <p id="txt"></p>
-        </div>
-       
-        <form action="#" id="form" class="form">
-            <div id="header">
-                <h2>حساب کاربری</h2>
+    <div id="boxes">
+        <section class="container" id="starter">
+            <div id="img1" class="image">
+                <img src="image/img3.jpg" alt="">
             </div>
-            <hr>
-            <div class="form-control">
-                <label  for="userName">نام کاربری</label>
-                <input type="text" id="userName">
-                <small></small>
+            <h3>Best way to be programer!</h3>
+            <button><a href="#">Sign Up</a></button>
+            <button><a href="#">Sign In</a></button>
+        </section>
+        <section class="container" id="SignInPage">
+            <div id="img2" class="image">
+                <img src="image/img2.jpg" alt="">
+                <form action="#">
+                    <h2>Sign In</h2>
+                    <div class="email">
+                        <label for="email">Email Address</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="password">
+                        <label for="password">password</label>
+                        <input type="password" name="password" id="password">
+                        <small><a href="#">Forget password?</a></small>
+                    </div>
+                    <div class="btn" id="SignIn">
+                        <input type="button" value="Sign In">
+                    </div>
+                    <h5>I'm a new user. <a href="#">Sign Up</a></h5>
+                </form>
             </div>
-            <div class="form-control">
-                <label for="email">ایمیل </label>
-                <input type="email" id="email">
-                <small></small>
+        </section>
+        <section class="container" id="createAccount">
+            <div id="img3" class="image">
+                <img src="image/desktop-wallpaper-the-man-in-black-tie-on-the-1280x800-black-guy.jpg" alt="">
             </div>
-            <div class="form-control">
-                <label for="password">رمز عبور </label>
-                <input type="password" id="password">
-                <small></small>
-            </div>
-            <div class="form-control">
-                <label  for="password2"> تکرار رمز عبور</label>
-                <input type="password" id="password2">
-                <small></small>
-            </div>
-            <button id="btn">عضویت</button>
-        </form>
+            <form action="#">
+                <h2>Create Account</h2>
+                <div class="name">
+                    <label for="fullName">Full Name</label>
+                    <input type="text" name="fullName">
+                </div>
+                <div class="number">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="number" name="phoneNumber">
+                </div>
+                <div class="email">
+                    <label for="email">Email Address</label>
+                    <input type="email" name="email">
+                </div>
+                <div class="password">
+                    <label for="password">Password</label>
+                    <input type="password" name="password">
+                </div>
+                <div class="btn">
+                    <input type="button" value="Sign Up" >
+                </div>
+                <h5>I'm already a member. <a href="#">Sign In</a></h5>
+            </form>
+        </section>
     </div>
-    <script src="app.js"></script>
+
+
+    <script src="main.js"></script>
 </body>
+
 </html>
