--- a/test validation/index.html
+++ b/test validation/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>test validation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animatin.css">
 </head>
+
 <body>
     <div id="container">
         <div id="info">
             <h3>Farhad Ahmadi</h3>
             <p id="txt"></p>
         </div>
-       
+
         <form action="#" id="form" class="form">
             <div id="header">
                 <h2>حساب کاربری</h2>
             </div>
             <hr>
             <div class="form-control">
-                <label  for="userName">نام کاربری</label>
+                <label for="userName">نام کاربری</label>
                 <input type="text" id="userName">
                 <small></small>
             </div>
@@ -36,7 +38,7 @@
                 <small></small>
             </div>
             <div class="form-control">
-                <label  for="password2"> تکرار رمز عبور</label>
+                <label for="password2"> تکرار رمز عبور</label>
                 <input type="password" id="password2">
                 <small></small>
             </div>
@@ -45,4 +47,5 @@
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
