--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>validaton</title>
-    <link rel="stylesheet" href="jsStyle.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     
 </head>
 
@@ -16,7 +16,11 @@
         <div>
            
         </div>
+        <!---------------- first section -------------->
         <section class="container" id="starter">
+
+
+
             <div id="img1" class="image">
                 <img src="image/img3.jpg" alt="">
             </div>
@@ -24,6 +28,8 @@
             <button id="signUpBtn" class="signUp"><a href="#">Sign Up</a></button>
             <button id="signInBtn"><a href="#">Sign In</a></button>
         </section>
+
+        <!------------------ 2nd section--------------->
         <section class="container" id="SignInPage">
             <div id="img2" class="image">
                 <img src="image/img2.jpg" alt="">
@@ -31,11 +37,12 @@
                     <h2>Sign In</h2>
                     <div class="email">
                         <label for="email">Email Address</label>
-                        <input type="email" name="email">
+                        <input type="email" name="email" required>
                         <small></small>
                     </div>
                     <div class="password">
                         <label for="password">password</label>
+                        <i class="far fa-eye" id="togglePasswordd" class="ayes"></i>
                         <input type="password" name="password" id="password">
                         <small></small>
                         <small><a href="#">Forget password?</a></small>
@@ -47,6 +54,8 @@
                 </form>
             </div>
         </section>
+
+        <!------------------- 3rd section--------------------->
         <section class="container" id="createAccount">
             <div id="img3" class="image">
                 <img src="image/desktop-wallpaper-the-man-in-black-tie-on-the-1280x800-black-guy.jpg" alt="">
@@ -55,7 +64,7 @@
                 <h2>Create Account</h2>
                 <div class="name">
                     <label for="fullName">Full Name</label>
-                    <input type="text" name="fullName">
+                    <input type="text" name="fullName" >
                     <small></small>
                 </div>
                 <div class="number">
@@ -65,11 +74,12 @@
                 </div>
                 <div class="email">
                     <label for="email">Email Address</label>
-                    <input type="email" name="email">
+                    <input type="email" name="email" required>
                     <small></small>
                 </div>
                 <div class="password">
                     <label for="password">Password</label>
+                    <i class="far fa-eye" id="togglePassword" class="ayes"></i>
                     <input type="password" name="password">
                     <small></small>
                 </div>
